tests/ui/closures/2229_closure_analysis/capture-analysis-2.stderr
error: First Pass analysis includes:
  --> $DIR/capture-analysis-2.rs:15:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _x = p.x;
...  |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> ByValue
  --> $DIR/capture-analysis-2.rs:18:18
   |
LL |         let _x = p.x;
   |                  ^^^
note: Capturing p[] -> Immutable
  --> $DIR/capture-analysis-2.rs:21:26
   |
LL |         println!("{:?}", p);
   |                          ^

error: Min Capture analysis includes:
  --> $DIR/capture-analysis-2.rs:15:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _x = p.x;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> ByValue
  --> $DIR/capture-analysis-2.rs:18:18
   |
LL |         let _x = p.x;
   |                  ^^^ p[] captured as ByValue here
...
LL |         println!("{:?}", p);
   |                          ^ p[] used here

error: aborting due to 2 previous errors

